# downloads-organizer

./: .gitignore  CLAUDE.md  README.md  README_CN.md  _files.md  pyproject.toml
src/downloads_organizer/: __main__.py  config.py  core.py  gui.py  watcher.py
tests/: test_config.py  test_core.py
